--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,64 @@
+attrs==19.1.0
 backports-abc==0.5
+backports.functools-lru-cache==1.5
 backports.shutil-get-terminal-size==1.0.0
-beautifulsoup4==4.5.1
+beautifulsoup4==4.7.1
+bleach==3.1.0
 bs4==0.0.1
-certifi==2016.9.26
+certifi==2019.3.9
 configobj==5.0.6
-configparser==3.5.0
-decorator==4.0.10
+configparser==3.7.4
+decorator==4.4.0
+defusedxml==0.5.0
 docopt==0.6.2
-entrypoints==0.2.2
+entrypoints==0.3
 enum34==1.1.6
 functools32==3.2.3.post2
-futures==3.0.5
-ipykernel==4.5.1
-ipyparallel==5.2.0
-ipython==5.1.0
-ipython-genutils==0.1.0
-ipywidgets==5.2.2
-Jinja2==2.8
-jsonschema==2.5.1
+futures==3.2.0
+ipaddress==1.0.22
+ipykernel==4.10.0
+ipyparallel==6.2.3
+ipython==5.8.0
+ipython-genutils==0.2.0
+ipywidgets==7.4.2
+Jinja2==2.10.1
+jsonschema==3.0.1
 jupyter==1.0.0
-jupyter-client==4.4.0
-jupyter-console==5.0.0
-jupyter-core==4.2.0
-lxml==3.6.4
-MarkupSafe==0.23
-mistune==0.7.3
-mpi4py==2.0.0
-mpmath==0.19
-nbconvert==4.2.0
-nbformat==4.1.0
-notebook==4.2.3
-numpy==1.11.2
-pathlib2==2.1.0
-pexpect==4.2.1
-pickleshare==0.7.4
-prompt-toolkit==1.0.9
-ptyprocess==0.5.1
-Pygments==2.1.3
-pyzmq==16.0.2
-qtconsole==4.2.1
+jupyter-client==5.2.4
+jupyter-console==5.2.0
+jupyter-core==4.4.0
+lxml==4.3.3
+MarkupSafe==1.1.1
+mistune==0.8.4
+git+https://github.com/mpi4py/mpi4py@3eb7e36#egg=mpi4py
+mpmath==1.1.0
+nbconvert==5.4.1
+nbformat==4.4.0
+notebook==5.7.8
+numpy==1.16.2
+pandocfilters==1.4.2
+pathlib2==2.3.3
+pexpect==4.7.0
+pickleshare==0.7.5
+prometheus-client==0.6.0
+prompt-toolkit==2.0.9
+ptyprocess==0.6.0
+Pygments==2.3.1
+pyrsistent==0.14.11
+python-dateutil==2.8.0
+pyzmq==18.0.1
+qtconsole==4.4.3
+scandir==1.10.0
+Send2Trash==1.5.0
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
-six==1.10.0
-sympy==1.0
-terminado==0.6
-tornado==4.4.2
-traitlets==4.3.1
+six==1.12.0
+soupsieve==1.9
+sympy==1.4
+terminado==0.8.2
+testpath==0.4.2
+tornado==5.1.1
+traitlets==4.3.2
 wcwidth==0.1.7
-widgetsnbextension==1.2.6
+webencodings==0.5.1
+widgetsnbextension==3.4.2
